--- a/stream_compaction/CMakeLists.txt
+++ b/stream_compaction/CMakeLists.txt
@@ -1,4 +1,8 @@
 set(SOURCE_FILES
+    "common.h"
+    "common.cu"
+    "efficient.h"
+    "efficient.cu"
     )
 
 cuda_add_library(stream_compaction
