Shared stream compaction

--- a/stream_compaction/CMakeLists.txt
+++ b/stream_compaction/CMakeLists.txt
@@ -1,6 +1,13 @@
 set(SOURCE_FILES
+    "common.h"
+    "common.cu"
+	"shared.h"
+	"shared.cu"
+"efficient.h"
+"efficient.cu"
     )
 
 cuda_add_library(stream_compaction
     ${SOURCE_FILES}
+    OPTIONS -arch=sm_61
     )
