Added support for different objects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,9 +94,12 @@ source_group(Sources FILES ${sources})
 
 include_directories(.)
 add_subdirectory(stream_compaction)  # TODO: uncomment if using your stream compaction
+add_subdirectory(tiny_obj)  # TODO: uncomment if using your stream compaction
+
 
 cuda_add_executable(${CMAKE_PROJECT_NAME} ${sources} ${headers})
 target_link_libraries(${CMAKE_PROJECT_NAME}
     ${LIBRARIES}
     stream_compaction  # TODO: uncomment if using your stream compaction
+	tiny_obj
     )
