--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ include_directories(${GLM_INCLUDE_DIRS})
 
 include_directories(external/tinyobjloader)
 include_directories(external/gltfraytracexample)
+include_directories(external/oidn/include)
 
 set(headers
     src/main.h
@@ -102,9 +103,11 @@ source_group(Headers FILES ${headers})
 source_group(Sources FILES ${sources})
 
 #add_subdirectory(stream_compaction)  # TODO: uncomment if using your stream compaction
+add_subdirectory(external/oidn)
 
 cuda_add_executable(${CMAKE_PROJECT_NAME} ${sources} ${headers})
 target_link_libraries(${CMAKE_PROJECT_NAME}
     ${LIBRARIES}
     #stream_compaction  # TODO: uncomment if using your stream compaction
+    OpenImageDenoise
     )
