--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,10 +92,13 @@ list(SORT sources)
 source_group(Headers FILES ${headers})
 source_group(Sources FILES ${sources})
 
+include_directories(.)
 #add_subdirectory(stream_compaction)  # TODO: uncomment if using your stream compaction
+#add_subdirectory(oidn)
 
 cuda_add_executable(${CMAKE_PROJECT_NAME} ${sources} ${headers})
 target_link_libraries(${CMAKE_PROJECT_NAME}
     ${LIBRARIES}
-    #stream_compaction  # TODO: uncomment if using your stream compaction
+    	#stream_compaction  # TODO: uncomment if using your stream compaction
+	#OpenImageDenoise
     )
